# michaelcc

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ast.hpp  compiler.cpp  compiler.hpp  constant_folding.cpp  constant_prop.cpp  dataflow.cpp  dataflow.hpp  dataflow_analysis.cpp  dead_code.cpp  errors.cpp  errors.hpp  flatten.cpp  flattener.cpp  ir_simplify.cpp  linker.cpp  linker.hpp  linking.cpp  logical.hpp  michaelcc.cpp  optimization.cpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp  print.cpp  scanner.cpp  semantic.cpp  semantic.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  symbols.hpp  syntax.hpp  test.asm  tokens.hpp  type_info.cpp  (+2 more)
assembly/: assembler.cpp
include/: errors.hpp  platform.hpp  utils.hpp
include/assembly/: assembler.hpp
include/isa/: isa.hpp  lc2200.hpp  x64.hpp
include/linear/: dominators.hpp  flatten.hpp  ir.hpp  optimization.hpp  pass.hpp  registers.hpp  static.hpp
include/linear/allocators/: frame_allocator.hpp  register_allocator.hpp  register_spiller.hpp  remove_phi.hpp
include/linear/optimization/: const_prop.hpp  copy_prop.hpp  dead_code.hpp  gvn.hpp  phi.hpp
include/linear/passes/: frame_allocator.hpp  stack_allocator.hpp
include/logic/: dataflow.hpp  ir.hpp  logical.hpp  optimization.hpp  semantic.hpp  symbols.hpp  type_info.hpp  typing.hpp
include/logic/analysis/: constant_analysis.hpp  recursion_analysis.hpp  return_analysis.hpp  side_effects.hpp
include/logic/dataflow/: constant_folding.hpp  constant_prop.hpp  dead_code.hpp  (+1 more)
include/syntax/: ast.hpp  parser.hpp  preprocessor.hpp  tokens.hpp
isa/: lc2200_assembler.cpp  lc2200_platform.cpp  x64.cpp  x64_assembler.cpp  x64_legalize.cpp  x64_platform.cpp
linear/: const_prop.cpp  copy_prop.cpp  dead_code.cpp  dominators.cpp  flattener.cpp  frame_allocator.cpp  gvn.cpp  optimization.cpp  pass.cpp  phi.cpp  register_allocator.cpp  register_spiller.cpp  registers.cpp  static.cpp
logic/: constant_folding.cpp  dead_code.cpp  ir_simplify.cpp  linker.cpp  optimization.cpp  semantic.cpp  type_info.cpp
syntax/: parser.cpp  scanner.cpp
tests/: arithmetic.c  arrays.c  bitwise.c  config.h  constant_folding.c  control_flow.c  data_structures.c  enums.c  expressions.c  fib.c  forward_decl.c  include.h  loops.c  main.c  math_ops.h  nested_structs.c  pointers.c  recursion.c  scopes.c  structs.c  unions.c
(+7 files in other folders)
